--- a/index.html
+++ b/index.html
@@ -1,37 +1,42 @@
-<!DOCTYPE html>
+<!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
 <html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Resume : i love Python" />
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
+  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+  <title>Resume</title>
+  <meta name="description" content="i love Python">
 
-    <title>Resume</title>
-  </head>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <body>
+</head>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/shuiyao2/aboutme">View on GitHub</a>
+<body>
 
-          <h1 id="project_title">Resume</h1>
-          <h2 id="project_tagline">i love Python</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/shuiyao2/aboutme/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/shuiyao2/aboutme/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
+  <div class="wrapper">
+    <header>
+      <h1 class="title">Resume</h1>
+    </header>
+    <div id="container">
+      <p class="tagline">i love Python</p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/shuiyao2/aboutme/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/shuiyao2/aboutme/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/shuiyao2/aboutme" class="code">View Resume on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <h3>
 <a name="python-%E5%BC%80%E5%8F%91%E5%B7%A5%E7%A8%8B%E5%B8%88" class="anchor" href="#python-%E5%BC%80%E5%8F%91%E5%B7%A5%E7%A8%8B%E5%B8%88"><span class="octicon octicon-link"></span></a>Python 开发工程师</h3>
 
 <hr><h4>
@@ -67,18 +72,26 @@
 <li>熟悉 Python Web 开发，熟悉 Flask 框架；</li>
 <li>略懂 MySql，熟悉基本 SQL 语句；</li>
 </ul>
-      </section>
+        </article>
+      </div>
     </div>
+    <footer>
+      <div class="owner">
+      <p><a href="https://github.com/shuiyao2" class="avatar"><img src="https://1.gravatar.com/avatar/17f9d1ab9a05402f01f02991502d07d5?d=https%3A%2F%2Fidenticons.github.com%2F827b2d56ee39795a026cf16c672cbcb6.png&amp;r=x&amp;s=60" width="48" height="48"/></a> <a href="https://github.com/shuiyao2">shuiyao2</a> maintains <a href="https://github.com/shuiyao2/aboutme">Resume</a></p>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Resume maintained by <a href="https://github.com/shuiyao2">shuiyao2</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
 
-    
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br/>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/shuiyao2/aboutme/tarball/master" class="tar">tar</a><a href="https://github.com/shuiyao2/aboutme/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
 
-  </body>
+  
+</body>
 </html>
