--- a/index.html
+++ b/index.html
@@ -1,42 +1,34 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
-  <title>Resume</title>
-  <meta name="description" content="i love Python">
+    <title>Resume by shuiyao2</title>
+  </head>
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <body>
 
-</head>
-
-<body>
-
-  <div class="wrapper">
     <header>
-      <h1 class="title">Resume</h1>
+      <div class="container">
+        <h1>Resume</h1>
+        <h2>i love Python</h2>
+
+        <section id="downloads">
+          <a href="https://github.com/shuiyao2/aboutme/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/shuiyao2/aboutme/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/shuiyao2/aboutme" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
     </header>
-    <div id="container">
-      <p class="tagline">i love Python</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/shuiyao2/aboutme/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/shuiyao2/aboutme/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/shuiyao2/aboutme" class="code">View Resume on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
+
+    <div class="container">
+      <section id="main_content">
+        <h3>
 <a name="python-%E5%BC%80%E5%8F%91%E5%B7%A5%E7%A8%8B%E5%B8%88" class="anchor" href="#python-%E5%BC%80%E5%8F%91%E5%B7%A5%E7%A8%8B%E5%B8%88"><span class="octicon octicon-link"></span></a>Python 开发工程师</h3>
 
 <hr><h4>
@@ -72,26 +64,9 @@
 <li>熟悉 Python Web 开发，熟悉 Flask 框架；</li>
 <li>略懂 MySql，熟悉基本 SQL 语句；</li>
 </ul>
-        </article>
-      </div>
+      </section>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/shuiyao2" class="avatar"><img src="https://1.gravatar.com/avatar/17f9d1ab9a05402f01f02991502d07d5?d=https%3A%2F%2Fidenticons.github.com%2F827b2d56ee39795a026cf16c672cbcb6.png&amp;r=x&amp;s=60" width="48" height="48"/></a> <a href="https://github.com/shuiyao2">shuiyao2</a> maintains <a href="https://github.com/shuiyao2/aboutme">Resume</a></p>
 
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br/>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/shuiyao2/aboutme/tarball/master" class="tar">tar</a><a href="https://github.com/shuiyao2/aboutme/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+    
+  </body>
 </html>
