Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <h2>i love Python</h2>
 
         <section id="downloads">
-          <a href="https://github.com/shuiyao2/aboutme/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/shuiyao2/aboutme/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/shuiyao2/aboutme" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="https://github.com/shuiyao2/job/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/shuiyao2/job/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/shuiyao2/job" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
     </header>
@@ -43,8 +43,7 @@
 
 <p>出生年月：1988-08  </p>
 
-<p>联系方式：shuiyao2(at)foxmail.com(邮箱)<br>
-         185-2052-2046(电话)  </p>
+<p>联系方式：shuiyao2(at)foxmail.com(邮箱)  </p>
 
 <hr><h4>
 <a name="%E8%87%AA%E6%88%91%E8%AF%84%E4%BB%B7" class="anchor" href="#%E8%87%AA%E6%88%91%E8%AF%84%E4%BB%B7"><span class="octicon octicon-link"></span></a>自我评价</h4>
