--- a/index.html
+++ b/index.html
@@ -4,32 +4,40 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Resume by shuiyao2</title>
-
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
   </head>
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/shuiyao2/job">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/shuiyao2/job/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/shuiyao2/job/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
+
     <div class="wrapper">
-      <header>
-        <h1 class="header">Resume</h1>
-        <p class="header">i love Python</p>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/shuiyao2/job/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/shuiyao2/job/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/shuiyao2/job">View On GitHub</a></li>
-        </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/shuiyao2">shuiyao2</a></p>
-
-
-      </header>
       <section>
+        <div id="title">
+          <h1>Resume</h1>
+          <p>i love Python</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/shuiyao2">shuiyao2</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
+
         <h3>
 <a name="python-%E5%BC%80%E5%8F%91%E5%B7%A5%E7%A8%8B%E5%B8%88" class="anchor" href="#python-%E5%BC%80%E5%8F%91%E5%B7%A5%E7%A8%8B%E5%B8%88"><span class="octicon octicon-link"></span></a>Python 开发工程师</h3>
 
@@ -39,13 +47,11 @@
 <h5>
 <a name="%E6%9C%B1%E6%98%8E%E7%94%B7" class="anchor" href="#%E6%9C%B1%E6%98%8E%E7%94%B7"><span class="octicon octicon-link"></span></a>朱明(男)</h5>
 
-<p>职业近况：  </p>
-
 <p>现居住地：广州 </p>
 
 <p>出生年月：1988-08  </p>
 
-<p>联系方式：shuiyao2(at)foxmail.com(邮箱)  </p>
+<p>联系方式：shuiyao2(at)foxmail.com</p>
 
 <hr><h4>
 <a name="%E8%87%AA%E6%88%91%E8%AF%84%E4%BB%B7" class="anchor" href="#%E8%87%AA%E6%88%91%E8%AF%84%E4%BB%B7"><span class="octicon octicon-link"></span></a>自我评价</h4>
@@ -66,11 +72,9 @@
 <li>熟悉 SQLite，熟悉基本 SQL 语句；</li>
 </ul>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
+
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+    
   </body>
 </html>
