--- a/index.html
+++ b/index.html
@@ -1,43 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+
     <title>Resume by shuiyao2</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
   </head>
+
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/shuiyao2/job">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/shuiyao2/job/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/shuiyao2/job/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
 
-    <div class="wrapper">
+    <header>
+      <div class="container">
+        <h1>Resume</h1>
+        <h2>i love Python</h2>
 
-      <section>
-        <div id="title">
-          <h1>Resume</h1>
-          <p>i love Python</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/shuiyao2">shuiyao2</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
+        <section id="downloads">
+          <a href="https://github.com/shuiyao2/job/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/shuiyao2/job/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/shuiyao2/job" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
+    <div class="container">
+      <section id="main_content">
         <h3>
 <a name="python-%E5%BC%80%E5%8F%91%E5%B7%A5%E7%A8%8B%E5%B8%88" class="anchor" href="#python-%E5%BC%80%E5%8F%91%E5%B7%A5%E7%A8%8B%E5%B8%88"><span class="octicon octicon-link"></span></a>Python 开发工程师</h3>
 
@@ -72,9 +62,8 @@
 <li>熟悉 SQLite，熟悉基本 SQL 语句；</li>
 </ul>
       </section>
-
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
     
   </body>
 </html>
